@@ -31,6 +31,7 @@ export(matchPars)
 export(modulationSpectrum)
 export(modulationSpectrumFolder)
 export(morph)
+export(msToSpec)
 export(normalizeFolder)
 export(optimizePars)
 export(osc_dB)
@@ -44,6 +45,7 @@ export(segmentFolder)
 export(semitonesToHz)
 export(soundgen)
 export(soundgen_app)
+export(specToMS)
 export(spectrogram)
 export(spectrogramFolder)
 export(ssm)
