@@ -5,6 +5,7 @@ BUGS FIXED:
 NEW FUNCTIONS:
   * invertSpectrogram(): reconstructs audio from a spectrogram by trying to guess the phase
   * filterMS(): filters a modulation spectrum by removing a certain range of amplitude modulation (AM) and frequency modulation (FM) frequencies
+  * specToMS(), msToSpec(): transform a spectrogram to a modulation spectrum and back again with proper labels
   * transplantEnv(): transplants the amplitude envelope from one sound to another
 
 MINOR:
